# osp-gruppe2-arevkenolucatim

./: .gitignore  README.md
docs/Abschluss/: Mappe.xlsx  Präsentation.pptx
docs/Deployment/: Datenbankstruktur und initiale Daten.sql
docs/Dokumentationen/: Datenbank-Diagramm.drawio
docs/Mockup/: GSO Marketplace.fig
docs/Protokolle/: Protokoll-2024-02-02.md  Protokoll-2024-02-09.md  Protokoll-2024-02-16.md  Protokoll-2024-02-23.md
docs/Prototyp/: prototype gso marketplace.drawio
docs/Prototyp/src/: companyView.html  confirmApplication.html  edit.html  guestlogin.html  index.html  login.html  orgaView.html  register.html
docs/Präsentation/: Präsentation.pptx
docs/sql/: BrainStorming_database.txt  TestDB.db.sql
src/: database.db  pyproject.toml  requirements.txt
src/flaskr/: __init__.py  auth.py  db.py  internal.py  public.py  schema.sql
src/flaskr/static/: style.css
src/flaskr/templates/: base.html  error.html  index.html
src/flaskr/templates/auth/: edit.html  guestLogin.html  login.html  register.html
src/flaskr/templates/internal/: companyView.html  organisationView.html  requestConfirm copy.html  requestConfirm.html  requestConfirmRegisterd.html  requestConfirmRegistered.html  requestEdit.html
src/flaskr/templates/public/: association.html  faq.html  policy.html
src/tests/: conftest.py  test_db.py  test_factory.py
src/tests/data/: testdata.sql
